22 October 2015: Wouter
	- 4.1.6 release tag.
	- trunk contain 4.1.7 in development.

20 October 2015: Wouter
	- 4.1.6rc2 tag created.

19 October 2015: Wouter
	- Fix compile of zonec error message on FreeBSD.

15 October 2015: Wouter
	- 4.1.6rc1 tag created.

13 October 2015: Wouter
	- nsd-checkconf warns for master zones with no zonefile statement.
	- Fix start failure when many file descriptors are in use.
	- The servfail rcode is not printed with a space in the middle.
	- fixup file descriptor fixup nicer.
	- print failed token for config syntax error or parse error.

12 October 2015: Wouter
	- Fix #711: Document that debug-mode yes is used for staying
	  attached to the supervisor console.
	- Document verbosity 3 prints more information.

30 September 2015: Wouter
	- makedist.sh print on pgp signature creation.

28 September 2015: Wouter
	- Fix typo in zonec.c inside error message.

24 September 2015: Wouter
	- Fix #701: Fix that AD=1 set in a BADVERS response.

21 September 2015: Wouter
	- Fix #706: default port 53 not opened on ip4 because of getaddrinfo
	  hints initialisation failure.
	- 4.1.5 release tag
	- trunk contains 4.1.6 in development.

9 September 2015: Wouter
	- 4.1.4 release tag created.
	- trunk contains 4.1.5 in development.

31 August 2015: Wouter
	- 4.1.4rc1 tag created.

28 August 2015: Wouter
	- Fix #698 formatting errors and typos in nsd.8.in.
	- Add --enable-pie and --enable-relro-now options.

18 August 2015: Wouter
	- Admitted axfrs are logged at verbosity 1.  Refused at verbosity 2.

17 August 2015: Wouter
	- Fixed checkconf test for reuseport setting.

14 August 2015: Wouter
	- SO_REUSEPORT does not work on FreeBSD.  Enabled by default on Linux,
	  not enabled by default on other OSes.

5 August 2015: Wouter
	- Fix that notify from nsd-control contains soa serial.

3 August 2015: Wouter
	- squelch SO_REUSEPORT failure on verbosity less than 3.

31 July 2015: Wouter
	- removed hardcoded interface limit, --with-max-ips removed.