@@ -4,6 +4,7 @@ NSD RELEASE NOTES
 ================
 FEATURES:
 BUG FIXES:
+	- Fix many interfaces and zones updates from nsd parent event loop.
 
 
 4.1.6
