@@ -13,17 +13,12 @@
 #include <sys/time.h>
 #include <string.h>
 #include <stdlib.h>
+#include <poll.h>
 
 #include "netio.h"
 #include "util.h"
 
-
-#ifndef HAVE_PSELECT
-int pselect(int n, fd_set *readfds, fd_set *writefds, fd_set *exceptfds,
-	    const struct timespec *timeout, const sigset_t *sigmask);
-#else
-#include <sys/select.h>
-#endif
+#define MAX_NETIO_FDS 1024
 
 netio_type *
 netio_create(region_type *region)
@@ -111,14 +106,18 @@ netio_current_time(netio_type *netio)
 int
 netio_dispatch(netio_type *netio, const struct timespec *timeout, const sigset_t *sigmask)
 {
-	fd_set readfds, writefds, exceptfds;
-	int max_fd;
+	/* static arrays to avoid allocation */
+	static struct pollfd fds[MAX_NETIO_FDS];
+	int numfd;
 	int have_timeout = 0;
 	struct timespec minimum_timeout;
 	netio_handler_type *timeout_handler = NULL;
 	netio_handler_list_type *elt;
 	int rc;
 	int result = 0;
+#ifndef HAVE_PPOLL
+	sigset_t origmask;
+#endif
 
 	assert(netio);
 
@@ -139,26 +138,24 @@ netio_dispatch(netio_type *netio, const struct timespec *timeout, const sigset_t
 	 * Initialize the fd_sets and timeout based on the handler
 	 * information.
 	 */
-	max_fd = -1;
-	FD_ZERO(&readfds);
-	FD_ZERO(&writefds);
-	FD_ZERO(&exceptfds);
+	numfd = 0;
 
 	for (elt = netio->handlers; elt; elt = elt->next) {
 		netio_handler_type *handler = elt->handler;
-		if (handler->fd != -1 && handler->fd < (int)FD_SETSIZE) {
-			if (handler->fd > max_fd) {
-				max_fd = handler->fd;
-			}
+		if (handler->fd != -1 && numfd < MAX_NETIO_FDS) {
+			fds[numfd].fd = handler->fd;
+			fds[numfd].events = 0;
+			fds[numfd].revents = 0;
+			handler->pfd = numfd;
 			if (handler->event_types & NETIO_EVENT_READ) {
-				FD_SET(handler->fd, &readfds);
+				fds[numfd].events |= POLLIN;
 			}
 			if (handler->event_types & NETIO_EVENT_WRITE) {
-				FD_SET(handler->fd, &writefds);
+				fds[numfd].events |= POLLOUT;
 			}
-			if (handler->event_types & NETIO_EVENT_EXCEPT) {
-				FD_SET(handler->fd, &exceptfds);
-			}
+			numfd++;
+		} else {
+			handler->pfd = -1;
 		}
 		if (handler->timeout && (handler->event_types & NETIO_EVENT_TIMEOUT)) {
 			struct timespec relative;
@@ -191,12 +188,17 @@ netio_dispatch(netio_type *netio, const struct timespec *timeout, const sigset_t
 	}
 
 	/* Check for events.  */
-	rc = pselect(max_fd + 1, &readfds, &writefds, &exceptfds,
-		     have_timeout ? &minimum_timeout : NULL,
-		     sigmask);
+#ifdef HAVE_PPOLL
+	rc = ppoll(fds, numfd, (have_timeout?&minimum_timeout:NULL), sigmask);
+#else
+	sigprocmask(SIG_SETMASK, &sigmask, &origmask);
+	rc = poll(fds, numfd, (have_timeout?minimum_timeout.tv_sec*1000+
+		minimum_timeout.tv_nsec/1000000:-1));
+	sigprocmask(SIG_SETMASK, &origmask, NULL);
+#endif /* HAVE_PPOLL */
 	if (rc == -1) {
 		if(errno == EINVAL || errno == EACCES || errno == EBADF) {
-			log_msg(LOG_ERR, "fatal error pselect: %s.", 
+			log_msg(LOG_ERR, "fatal error poll: %s.", 
 				strerror(errno));
 			exit(1);
 		}
@@ -225,26 +227,27 @@ netio_dispatch(netio_type *netio, const struct timespec *timeout, const sigset_t
 		 * calling the current handler!
 		 */
 		assert(netio->dispatch_next == NULL);
+
 		for (elt = netio->handlers; elt && rc; ) {
 			netio_handler_type *handler = elt->handler;
 			netio->dispatch_next = elt->next;
-			if (handler->fd != -1 && handler->fd < (int)FD_SETSIZE) {
+			if (handler->fd != -1 && handler->pfd != -1) {
 				netio_event_types_type event_types
 					= NETIO_EVENT_NONE;
-				if (FD_ISSET(handler->fd, &readfds)) {
+				if ((fds[handler->pfd].revents & POLLIN)) {
 					event_types |= NETIO_EVENT_READ;
-					FD_CLR(handler->fd, &readfds);
-					rc--;
 				}
-				if (FD_ISSET(handler->fd, &writefds)) {
+				if ((fds[handler->pfd].revents & POLLOUT)) {
 					event_types |= NETIO_EVENT_WRITE;
-					FD_CLR(handler->fd, &writefds);
-					rc--;
 				}
-				if (FD_ISSET(handler->fd, &exceptfds)) {
-					event_types |= NETIO_EVENT_EXCEPT;
-					FD_CLR(handler->fd, &exceptfds);
-					rc--;
+				if ((fds[handler->pfd].revents &
+					(POLLNVAL|POLLHUP|POLLERR))) {
+					/* closed/error: give a read event,
+					 * or otherwise, a write event */
+					if((handler->event_types&NETIO_EVENT_READ))
+						event_types |= NETIO_EVENT_READ;
+					else if((handler->event_types&NETIO_EVENT_WRITE))
+						event_types |= NETIO_EVENT_WRITE;
 				}
 
 				if (event_types & handler->event_types) {
