@@ -16,7 +16,6 @@
  *
  *   NETIO_EVENT_READ: reading will not block.
  *   NETIO_EVENT_WRITE: writing will not block.
- *   NETIO_EVENT_EXCEPT: an exception occurred.
  *   NETIO_EVENT_TIMEOUT: the timeout expired.
  *
  * A file descriptor must be specified if the handler is interested in
@@ -58,8 +57,7 @@ enum netio_event_types {
 	NETIO_EVENT_NONE    = 0,
 	NETIO_EVENT_READ    = 1,
 	NETIO_EVENT_WRITE   = 2,
-	NETIO_EVENT_EXCEPT  = 4,
-	NETIO_EVENT_TIMEOUT = 8,
+	NETIO_EVENT_TIMEOUT = 4,
 };
 typedef enum netio_event_types netio_event_types_type;
 
@@ -104,6 +102,9 @@ struct netio_handler
 	 * checked for.
 	 */
 	int fd;
+
+	/** index of the pollfd array for this handler */
+	int pfd;
 
 	/*
 	 * The time when no events should be checked for and the
